--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
                 <p>Доставка товаров из Китая</p>
             </a>
             <a href="~/Home/Uslugi">
-                <img src="~/images/uslugi.png" />
+                <img src="~/images/gid.png" />
                 <h3>Услуги</h3>
                 <p>Доставка товаров из Китая</p>
             </a>
@@ -77,8 +77,8 @@
                 <p>Список отели в вашем городе</p>
             </a>
             <a href="#!">
-                <img src="~/images/gid.png" />
-                <h3>Контакты</h3>
+                <img src="~/images/uslugi.png" />
+                <h3>Отели</h3>
                 <p>Ответы на все вопросы</p>
             </a>
         </div>
@@ -124,29 +124,29 @@
     </div>
     <div class="sect3">
         <h3 class="sect3-h">Магазин SQ Express</h3>
-        <p>Выбор лучшей цены.</p>
+        @*<p>Выбор лучшей цены.</p>*@
         <div class="sect3-cont">
-            <a href="#!">
+            <a href="~/Store/Shop">
                 <img src="~/images/f1.png"/>
                 <p>Телефоны, <br />Гаджеты</p>
             </a>
-            <a href="#!">
+            <a href="~/Store/Shop">
                 <img src="~/images/f2.png" />
                 <p>Автотовары</p>
             </a>
-            <a href="#!">
+            <a href="~/Store/Shop">
                 <img src="~/images/f3.png" />
                 <p>Украшения, <br />Аксессуары</p>
             </a>
-            <a href="#!">
+            <a href="~/Store/Shop">
                 <img src="~/images/f4.png" />
                 <p>Компьютеры</p>
             </a>
-            <a href="#!">
+            <a href="~/Store/Shop">
                 <img src="~/images/f5.png" />
                 <p>ТВ, Аудио <br />Видео</p>
             </a>
-            <a href="#!">
+            <a href="~/Store/Shop">
                 <img src="~/images/f6.png" />
                 <p>Товары для дома и дачи</p>
             </a>
