--- a/SqApp/Views/Home/Kurer.cshtml
+++ b/SqApp/Views/Home/Kurer.cshtml
@@ -122,6 +122,47 @@
             <p>Казахстан, Россия, Украина, Беларусь, Армения, Молдова, Азербайджан, Узбекистан, Кыргызстан. 178 представительств</p>
         </div>
     </div>
+    <div class="sect4">
+        <h3>Начать отправлять просто</h3>
+        <div class="sect4-items">
+            <div>
+                <p>Рассчитайте стоимость</p>
+                <a href="#!" class="more">КАЛЬКУЛЯТОР</a>
+            </div>
+            <div>
+                <p>Вызовите курьера</p>
+                <a href="#!" class="more">ОСТАВИТЬ ЗАЯВКУ</a>
+            </div>
+            <div>
+                <p>Подготовьте отправление</p>
+                <a href="#!" class="more">УЗНАТЬ ОБ УПАКОВКЕ</a>
+            </div>
+        </div>
+    </div>
+    <div class="sect5">
+        <div class="sect5-head">
+            <div class="news">Новости</div>
+            <div class="sect5-nav">
+                <a href="#!">События</a>
+                <a href="#!"> Уведомления</a>
+                <a href="#!" class="more">СМОТРЕТЬ ВСЕ</a>
+            </div>
+        </div>
+        <div class="sect5-cont">
+            <a href="#!">
+                <p>07 октября 2019</p>PONY EXPRESS стал лидером отрасли в Казахстане в 2019 году
+            </a>
+            <a href="#!">
+                <p>16 апреля 2019</p>Акция «Сходи в кино вместе с PONY EXPRESS»!
+            </a>
+            <a href="#!">
+                <p>04 мая 2018</p>График работы в праздничные дни
+            </a>
+            <a href="#!">
+                <p>30 апреля 2018</p>График работы в праздничные дни
+            </a>
+        </div>
+    </div>
 </content>
 
 <script src="~/js/slider.min.js"></script>
