--- a/SqApp/Views/Shared/_Layout.cshtml
+++ b/SqApp/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                 <li>
                     <a href="#!" class="mob-down mob-dost">Доставка<i class="fa fa-angle-right"></i></a>
                     <ul class="mob-down-menu mob-dost-menu">
-                        <li><a href="#!">Курьерская служба</a></li>
+                        <li><a href="~/Home/Kurer">Курьерская служба</a></li>
                         <li><a href="~/Home/Logistika">Логистика</a></li>
                     </ul>
                 </li>
@@ -101,7 +101,7 @@
                                 <a href="#!" class="down dost">Доставка</a>
                                 <ul class="down-menu dost-menu">
                                     <i class="fa fa-caret-up"></i>
-                                    <li><a href="#!">Курьерская служба</a></li>
+                                    <li><a href="~/Home/Kurer">Курьерская служба</a></li>
                                     <li><a href="~/Home/Logistika">Логистика</a></li>
                                 </ul>
                             </li>
