--- a/SqApp/wwwroot/css/kurer.css
+++ b/SqApp/wwwroot/css/kurer.css
@@ -155,7 +155,7 @@
 	padding-top: 40px;
 	padding-left: 15%;
 	position: relative;
-	margin-bottom: 350px;
+	margin-bottom: 200px;
 }
 .sect3 *{
 	color: #fff;
@@ -251,20 +251,165 @@
 
 }
 
+/*---------------SECT4-----------------------*/
+.sect4{
+	width: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
+	margin-bottom: 100px;
+}
+.sect4 > h3{
+	width: 10%;
+	font-size: 20px;
+	margin-right: 25px;
+}
+.sect4-items{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+}
 
+.sect4-items > div{
+	/*width: 30%;*/
+	position: relative;
+	margin: 0 25px;
+	/*outline: 1px solid;*/
+}
+.sect4-items p{
+	width: 50%;
+	color: #168346;
+	position: relative;
+	/*outline: 1px solid;*/
+	margin-bottom: 15px;
+}
 
+.sect4-items p::before{
+	font-size: 40px;
+	position: absolute;
+	top: -5px;
+	left: -30px;
+}
+.sect4-items > div:nth-child(1) p::before{
+	content: "1";
+}
+.sect4-items > div:nth-child(2) p::before{
+	content: "2";
+}
+.sect4-items > div:nth-child(3) p::before{
+	content: "3";
+}
+.more{
+	padding: 10px 20px;
+	text-decoration: none;
+	background-color: #C9DB2A;
+	color: #168346;
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: bold;
+	border-radius: 25px;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
+	transition: 0.5s;
+}
+.more:hover{
+	background-color: #168346;
+	color: #fff;
+}
 
+/*----------------SECT5--------------------*/
+.sect5{
+	width: 100%;
+	background-color: #168346;
+	padding: 40px 15%;
+}
+.sect5-head{
+	width: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-ms-align-items: center;
+	align-items: center;
+	margin-bottom: 50px;
+}
+.news{
+	font-size: 30px;
+	font-weight: bolder;
+	color: #C9DB2A;
+	text-transform: uppercase;
+	margin-right: 50px;
+	position: relative;
+}
+.news::after{
+	content: "/";
+	color: #C9DB2A;
+	font-size: 32px;
+	position: absolute;
+	right: -50px;
+	transform: rotateZ(30deg);
+}
+.sect5-nav{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-ms-align-items: center;
+	align-items: center;
+}
+.sect5-nav > a{
+	margin: 0 25px;
+	color: #fff;
+	font-weight: bolder;
+	text-decoration: underline;
+	-webkit-transition: 0.2s;
+	-o-transition: 0.2s;
+	transition: 0.2s;
+}
+.sect5-nav > a:hover{
+	text-decoration: none;
+	color: #6ABC33;
+}
+.sect5-nav > a.more{
+	margin-left: 50px;
+	color: #004631;
+	text-decoration: none;
+}
+.sect5-nav > a.more:hover{
+	background-color: #6ABC33;
+	color: #fff;
+}
 
+.sect5-cont{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+}
+.sect5-cont > a{
+	width: 20%;
+	color: #fff;
+	text-decoration: none;
+}
 
-
-
-
-
-
-
-
-
-
+.sect5-cont > a:hover{
+	text-decoration: underline;
+}
+.sect5-cont > a > p{
+	color: #004631;
+	margin-bottom: 15px;
+	text-decoration: none;
+}
 
 
 
@@ -310,6 +455,7 @@
 
 	.sect3{
 		padding: 40px 10%;
+		margin-bottom: 400px;
 	}
 	.sect3 > h3{
 		font-size: 40px;
@@ -326,6 +472,29 @@
 		margin-right: 0;
 		margin-left: 50px;
 	}
+
+	.sect3-bg{
+		width: 100%;
+		transform: none;
+	}
+
+	.lists > ul{
+		width: auto;
+	}
+	.sect3-bottom > p{
+		width: 70%;
+		margin-top: 25px;
+	}
+	.sect4{
+		margin-bottom: 50px;
+	}
+	.sect5{
+		padding: 40px 10%;
+	}
+
+
+
+
 }
 @media  (max-width: 768px){
 
@@ -353,6 +522,7 @@
 	.sect3{
 		padding: 30px 5%;
 		justify-content: center;
+		margin-bottom: 350px;
 	}
 	.sect3 > h3{
 		width: 70%;
@@ -369,6 +539,45 @@
 	.score{
 		height: 140px;
 		margin: 0 25px;
+	}
+	
+	.sect4{
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+	}
+	.sect4 > h3{
+		width: auto;
+		font-size: 30px;
+		text-align: center;
+		margin-bottom: 30px;
+	}
+	.sect4-items{
+		justify-content: center;
+	}
+	.sect4-items p{
+		width: 120px;
+	}
+	.more{
+		padding: 10px;
+		font-size: 12px;
+	}
+	.news{
+		font-size: 24px;
+		margin-right: 30px;
+	}
+	.news::after{
+		font-size: 24px;
+		right: -30px;
+	}
+	.sect5-nav > a{
+		margin: 0 15px;
+	}
+	.sect5-nav > a.more{
+		margin: 0;
+		margin-left: 25px;
 	}
 
 }
@@ -457,10 +666,141 @@
 	.score-text{
 		font-size: 12px;
 	}
+	.sect3-bottom{
+		padding: 0 10%;
+		margin-top: 40px;
+	}
+	.lists{
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+		margin-top: 20px;
+	}
+	.lists > ul > li a{
+		margin-bottom: 15px;
+	}
+	.sect3-bottom > p{
+		width: 100%;
+		margin-top: 0;
+	}
+	.sect4{
+		margin-top: 350px;
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+	}
+
+	.sect4 > h3{
+		width: 100%;
+		font-size: 24px;
+		margin: 0;
+		margin-bottom: 20px;
+	}
+	.sect4-items{
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+	}
+	.sect4-items p{
+		width: auto;
+	}
+	.sect4-items > div{
+		margin-bottom: 30px;
+		padding-left: 15px;
+	}
+	.sect4-items p::before{
+		top: 0;
+		left: -40px;
+		font-size: 50px;
+		font-weight: bolder;
+	}
+	.sect5{
+		padding: 30px 5%;
+	}
+	.sect5-head, .sect5-cont{
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+	}
+	.sect5-head{
+		margin-bottom: 25px;
+	}
+	.news{
+		margin: 10px 0;
+	}
+	.news::after{
+		display: none;
+	}
+	.sect5-nav > a{
+		margin: 0;
+		margin-right: 25px;
+	}
+	.sect5-nav > a.more{
+		margin: 0;
+		text-align: center;
+	}
+	.sect5-cont{
+		padding: 0 5%;
+	}
+	.sect5-cont > a{
+		width: 100%;
+		margin-bottom: 25px;
+		text-decoration: underline;
+	}
+	.sect5-cont > a > p{
+		margin-bottom: 10px;
+	}
 }
 @media  (max-width: 375px){
+	.sect3-bottom{
+		margin-top: 20px;
+	}
 
 }
 @media  (max-width: 320px){
+	.sect3-bottom{
+		height: 70%;
+		padding: 0;
+		padding-left: 25px;
+	}
+	.sect3 > h3{
+		width: 100%;
+	}
+	.score{
+		margin: 0 20px;
+		height: 75px;
+	}
+	.score > p{
+		font-size: 24px;
+	}
+	.sect4{
+		margin-top: 320px;
+	}
+	.sect4 > h3{
+		font-size: 20px;
+	}
+	.sect5-nav{
+		-webkit-flex-wrap: wrap;
+		-moz-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		-o-flex-wrap: wrap;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.sect5-nav > a{
+		margin: 0 15px;
+	}
+
+	.sect5-nav > a.more{
+		margin-top: 10px;
+	}
 
 }
