--- a/SqApp/Views/Admin/ListPodCategory.cshtml
+++ b/SqApp/Views/Admin/ListPodCategory.cshtml
@@ -14,8 +14,14 @@
     <tr>
         <td>@x.Id</td>
         <td>@x.Name</td>
-        <td>@ViewBag.pctname</td>
+        <td class="pctname">@ViewBag.pctname</td>
         <td><a href="~/Admin/EditPodCategory/@x.Id">Изменить</a></td>
         <td><a href="~/Admin/DeletePodCategory/@x.Id">Удалить</a></td>
     </tr>
 }
+<script>
+    $(document).ready(function () {
+            $('.pct-preloader').css('display', 'none');
+    })
+    
+</script>
