korzina bitken kez

--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
                 <h3>Доставка</h3>
                 <p>Оптовые товары из Китая</p>
             </a>
-            <a href="#!">
+            <a href="~/Home/Kurer">
                 <img src="~/images/kurer.png" />
                 <h3>Курьерская служба</h3>
                 <p>Оптовые товары из Китая</p>
@@ -118,7 +118,7 @@
             </a>
             <a href="#!">
                 <img src="~/images/ekonom.png" />
-                <h3>эконом транспорт</h3>
+                <h3>Эконом транспорт</h3>
             </a>
         </div>
     </div>
