--- a/SqApp/Views/Home/Kurer.cshtml
+++ b/SqApp/Views/Home/Kurer.cshtml
@@ -172,8 +172,8 @@
          $(function () {
              $('.slider').rbtSlider({
                  'height': '100%',
-                 'dots': false,
-                 'arrows': false,
+                 'dots': true,
+                 'arrows': true,
                  'auto': 3
              })
          });
