--- a/SqApp/wwwroot/css/const.css
+++ b/SqApp/wwwroot/css/const.css
@@ -75,8 +75,9 @@
 	overflow-y: hidden;
 }
 
-/*-------------------------Select REGION-----------------------*/
-.region {
+/*-------------------------Boost Menu-----------------------*/
+
+.boost-menu {
     width: 101vw;
     height: 100vh;
     position: absolute;
@@ -85,35 +86,35 @@
     background-color: #ddd;
     z-index: 10000;
     overflow-y: scroll;
-    /*transform: translateX(201vw);*/
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
 }
-.act-region {
+
+.act-boost-menu {
     /*transform: translateX(101vw);*/
     right: -101vw;
 }
-.region > button{
-	width: 100vw;
-	text-align: center;
-	padding: 15px;
-	background-color: #118CE9;
+.boost-menu > button {
+    width: 100vw;
+    text-align: center;
+    padding: 15px;
+    background-color: #118CE9;
     color: #fff;
-	position: fixed;
-	/*right: -100vw;*/
-	bottom: 0;
+    position: fixed;
+    /*right: -100vw;*/
+    bottom: 0;
     z-index: 10000;
 }
-.region > h3{
-	width: 100%;
-	text-align: center;
+.boost-menu > h3 {
+    width: 100%;
+    text-align: center;
     font-size: 16px;
-	padding: 15px;
-	background-color: #fff;
-	position: relative;
+    padding: 15px;
+    background-color: #fff;
+    position: relative;
 }
-.region > h3 > i{
+.boost-menu > h3 > i{
 	width: 25px;
 	height: 25px;
 	font-size: 25px;
@@ -234,7 +235,10 @@ ul.mob-dost-menu > li a{
 	right: -100vw;
 	z-index: 10000;
 }
-
+.mob-user-aut-menu > li a i{
+    color: #FF3D28;
+    margin-right: 5px;
+}
 .mob-menu > ul > li a.mob-user-aut {
     display: -webkit-flex;
     display: -moz-flex;
@@ -262,6 +266,7 @@ ul.mob-dost-menu > li a{
 }
 
 .user-text {
+    color: #FF3D28;
     font-size: 12px;
 }
 
@@ -521,6 +526,121 @@ a.mob-down:hover, a.mob-down:hover > i{
 	color: #fff;
 }
 
+.modal-window {
+    width: 90vw;
+    height: 80vh;
+    background-color: #fff;
+    position: fixed;
+    display: none;
+    border-radius: 7px;
+    justify-content: center;
+    -ms-align-items: center;
+    align-items: center;
+    margin: 0 auto;
+    top: 70px;
+    left: 5vw;
+    z-index: 12220;
+}
+.section{
+	width: 100%;
+	height: 100%;
+  border: 1px solid #243E71;
+  border-radius: 7px;
+  position: relative;
+  color: #000 !important;
+  overflow-y: scroll;
+}
+.section > h1{
+    border-bottom: 1px solid #CBD6E8;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+.user-tovar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.user-tovar > .tovar{
+    width: 20%;
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #CBD6E8;
+}
+.user-tovar .tov-img {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border-bottom: 1px solid #CBD6E8;
+}
+.user-tovar .tov-img > img {
+    width: 100%;
+}
+.user-tovar a.tovar-name {
+    display: block;
+    height: 35px;
+    margin: 10px 0;
+    font-size: 14px;
+    text-decoration: none;
+}
+.user-tovar a.tovar-name:hover {
+    text-decoration: underline;
+}
+.user-tovar .price {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.user-tovar .price > p {
+    width: 50%;
+    font-size: 14px;
+    color: #90A8D1;
+    padding-left: 10px;
+}
+.user-tovar .price > p:first-child {
+    border-right: 1px solid #90A8D1;
+    padding-left: 0;
+}
+.close {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    z-index: 1005;
+    border: 2px solid #118CE9;
+    border-radius: 25%;
+    top: 6px;
+    right: 6px;
+    cursor: pointer;
+    float: right;
+    background-color: #fff;
+}
+.close:hover{
+  box-shadow: 0 0 10px #118CE9;
+}
+.close span{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.close span::after, .close span::before{
+  width: 16px;
+  height: 2px;
+  display: block;
+  content: '';
+  background-color: #118CE9;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -1px;
+  margin-left: -8px;
+  border-radius: 5px;
+}
+.close span::after{
+  transform: rotateZ(45deg);
+}
+.close span::before{
+  transform: rotateZ(-45deg);
+}
 /*-------------------CONTENT-------------------------------------*/
 
 
@@ -645,9 +765,12 @@ a.mob-down:hover, a.mob-down:hover > i{
 		margin-right: 10px;
 		padding-right: 10px;
 	}
-	.right i{
-		font-size: 20px;
-	}
+    .user-tovar > .tovar{
+        width: 30%;
+    }
+    .right i {
+        font-size: 20px;
+    }
     .market {
         display: flex;
         flex-direction: column;
@@ -685,6 +808,15 @@ a.mob-down:hover, a.mob-down:hover > i{
         width: auto;
         height: 25px;
     }
+    .user-tovar {
+        justify-content: space-around;
+        padding: 15px 10px;
+        padding-bottom: 60px;
+    }
+    .user-tovar > .tovar {
+        width: 45%;
+        background-color: #fff;
+    }
 	.fmidle{
 		margin-left: 5px;
 	}
@@ -720,6 +852,22 @@ a.mob-down:hover, a.mob-down:hover > i{
 @media  (max-width: 375px){
     .logo {
         margin-left: -60%;
+    }
+
+    .user-tovar {
+        justify-content: space-around;
+        padding: 0;
+        padding-bottom: 60px;
+    }
+    .user-tovar > .tovar {
+        width: 50%;
+        background-color: #fff;
+        margin: 10px 0;
+        border: none;
+        border-left: 1px solid #90A8D1;
+    }
+    .user-tovar > .tovar:nth-child(odd){
+        border: none;
     }
 }
 @media  (max-width: 320px){
