--- a/SqApp/wwwroot/css/admin.css
+++ b/SqApp/wwwroot/css/admin.css
@@ -11,9 +11,9 @@ content .tovar{
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20%;
+  width: 200px;
   padding: 20px;
-  margin: 10px 0;
+  margin: 10px;
   background-color: #fff;
   box-shadow: 0 1px 5px #90A8D1;
   -webkit-transition: 0.5s;
@@ -58,6 +58,7 @@ content > .lists {
     display: -ms-flex;
     display: -o-flex;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
